--- a/说明.md
+++ b/说明.md
@@ -143,9 +143,10 @@ python emotic_keras_glove.py
 文件中的`# prediction with the model`部分划分为四个部分，分别对应：
 
 1. 使用`emotic_keras_training.py`进行训练，并且`input_struct`的值为`'bag_of_words'`，`model_type`的值**不**为`'rnn','lstm'或'bi_lstm'`
-2. 使用`emotic_keras_training.py`进行训练，并且`input_struct`的值为`'bag_of_words'`，`model_type`的值为`'rnn','lstm'或'bi_lstm'`
-3. 使用`emotic_keras_training.py`进行训练，并且`sequence_of_words`的值为`'bag_of_words'`，`model_type`的值为`'rnn','lstm'或'bi_lstm'`
-4. 使用`emotic_keras_glove.py`进行训练
+2. 使用`emotic_keras_training.py`进行训练，并且`input_struct`的值为`'bag_of_words'`，`model_type`的值为`'cnn','rnn','lstm'或'bi_lstm'`
+3. 使用`emotic_keras_training.py`进行训练，并且`input_struct`的值为`'bag_of_words'`，`model_type`的值为`'cnn_lstm'`
+4. 使用`emotic_keras_training.py`进行训练，并且`sequence_of_words`的值为`'bag_of_words'`，`model_type`的值为`'rnn','lstm'或'bi_lstm'`
+5. 使用`emotic_keras_glove.py`进行训练
 
 根据不同的训练方法，将文件中的对应部分取消注释，并将其他非对应的训练方法部分的代码设为注释，然后运行`emotic_keras_test.py`，获得预测结果：
 
